Prevent social overflow

--- a/_scss/social.scss
+++ b/_scss/social.scss
@@ -1,4 +1,6 @@
 .social {
+  overflow: hidden;
+
   .facebook,
   .twitter {
     float: left;
